Closed Bug 622684 Opened 14 years ago Closed 14 years ago

updates should not be downloaded to "<sdcard>/downloads"

Categories

(Core Graveyard :: Widget: Android, defect)

All
Android
defect
Not set
normal

Tracking

(fennec2.0b4+)

RESOLVED FIXED
Tracking Status
fennec 2.0b4+ ---

People

(Reporter: blassey, Assigned: blassey)

References

Details

Attachments

(1 file)

Attached patch patchSplinter Review
"<sdcard>/downloads" is not the correct place to be downloading stuff. Prior to froyo, the correct place was "<sdcard>/download". With froyo and newer there's an API to get the correct folder. Rather than reconstruct this path in multiple places, this patch sets an env var that can be checked.
Attachment #500897 - Flags: review?(mbrubeck)
tracking-fennec: --- → ?
Attachment #500897 - Flags: review?(mbrubeck) → review+
Blocks: 621218
OS: Linux → Android
Hardware: x86_64 → All
tracking-fennec: ? → 2.0b4+
pushed http://hg.mozilla.org/mozilla-central/rev/322a2dca6977
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Assignee: nobody → blassey.bugs
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: