bug 622684 - updates should not be downloaded to "<sdcard>/downloads" r=mbrubeck a=blocking-fennec